--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'com.zzh'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'eclipse'
 apply plugin: 'maven'
 
 sourceCompatibility = 1.8
